--- a/today.html
+++ b/today.html
@@ -1,11 +1,60 @@
 <html>
-
-<head>
-</head>
-
-
+    <head>
+        <title>List</title>
+    </head>
     <body>
-        hello world
+        <h1>Today Window</h1>
+        <div id="list"></div>
     </body>
 
+    <script>
+        const electron = require("electron");
+        const {ipcRenderer} = electron;
+
+        ipcRenderer.send("appointment:request:today");
+
+        ipcRenderer.on("appointment:request:today", (event, appointments) => {
+            const listDiv = document.getElementById("List");
+            appointments.forEach(appointment => {
+                const appointmentDiv = document.createElement("div");
+
+                const nameParagraph = document.createElement("p");
+                nameParagraph.innerHTML = `Name: ${appointment.name}`;
+
+                const numberParagraph = document.createElement("p");
+                numberParagraph.innerHTML = `Phone number: ${appointment.number}`;
+
+                const dateParagraph = document.createElement("p");
+                dateParagraph.innerHTML = `Date: ${appointment.date}`;
+
+                const hourParagraph = document.createElement("p");
+                hourParagraph.innerHTML = `Hour: ${appointment.hour}`;
+
+                const symptomsParagraph = document.createElement("p");
+                symptomsParagraph.innerHTML = `Name: ${appointment.symptoms}`;
+
+                const doneButton = document.createElement("button");
+                doneButton.innerHTML = "Done";
+                doneButton.disabled = appointment.done ? true : false ;
+                doneButton.oneclick = () => done(appointment.id);
+
+                const hr = document.createElement("hr");
+                
+                appointmentDiv.appendChild(nameParagraph);
+                appointmentDiv.appendChild(numberParagraph);
+                appointmentDiv.appendChild(dateParagraph);
+                appointmentDiv.appendChild(hourParagraph);
+                appointmentDiv.appendChild(symptomsParagraph);
+                appointmentDiv.appendChild(doneParagraph);
+                appointmentDiv.appendChild(doneButton);
+                appointmentDiv.appendChild(hr);
+
+                listDiv.append(appointmentDiv);
+            });
+
+        });
+        const done = id => {
+            ipcRenderer.send("appointment:done", id);
+        };
+</script>
 </html>
